--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.12.0",
+    "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-progress": "^1.1.2",
-    "@sanity/client": "^6.28.0",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@sanity/client": "^6.28.3",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.76.1",
+    "@stripe/stripe-js": "^6.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "groq": "^3.76.3",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.1.7",
     "next-sanity": "^9.8.59",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sanity": "^3.76.1",
+    "stripe": "^17.7.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
