--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "sanity": "^3.76.1",
     "stripe": "^17.7.0",
     "styled-components": "^6.1.15",
